03-configs-and-routes/route/route_rev1-10_rev2-90.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
spec:
  traffic:
    - revisionName: $revision1
      percent: 10
    - revisionName: $revision2
      percent: 90
