03-configs-and-routes/route/route_rev1-50_rev2-50.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
spec:
  traffic:
    - revisionName: $revision1
      percent: 50
    - revisionName: $revision2
      percent: 50
