03-configs-and-routes/route/route_rev1-75_rev2-25.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
spec:
  traffic:
    - revisionName: greeter-00001
      percent: 75
    - revisionName: greeter-00002
      percent: 25
